# universe

./: .coderabbit.yml  .env  .gitignore  .license.ignore  .npmrc  .prettierignore  .prettierrc  :w  AIRDROP_CLAIM_IMPLEMENTATION.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  diff  docker_script.sh  eslint.config.js  exchanges.json  glApp.d.ts  global.d.ts  index.html  knip.json  knip.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri_private_key.pem  test-report-ubuntu.txt  test.txt  todos.md  tsconfig.json  vite.config.e2e.ts  vite.config.playwright.ts  vite.config.ts  xmrig.releases.json
process-wrapper/: Cargo.toml
process-wrapper/src/: main.rs
src-tauri/: .env  .gitignore  Cargo.toml  Info.plist  binaries_versions.json  binaries_versions_esmeralda.json  binaries_versions_igor.json  binaries_versions_nextnet.json  build.rs  clippy.toml  config.json  contractnet_config.template.toml  development_wallet.db  diesel.toml  env.esme  env.esmeralda  env.igor  env.localnet  env.mainnet  env.nextnet  lints.toml  log4rs_sample.yml  rust-toolchain  tauri.conf.json  tauri.conf.json5  tauri.test.conf.json  unused_example_node_config.toml  wallet_daemon.config.toml
src-tauri/beta-icons/: icon.icns
src-tauri/binaries-versions/: binaries_versions_localnet.json  binaries_versions_mainnet.json  binaries_versions_mainnet_cdn.json  binaries_versions_nextnet.json  binaries_versions_stagenets.json  binaries_versions_testnets.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns  systray_icon.icns
src-tauri/log4rs/: base_node_sample.yml  ootle_wallet_sample.yml  proxy_sample.yml  spend_wallet_sample.yml  universe_sample.yml  wallet_sample.yml
src-tauri/migrations/: 20250828125438_init.sql  development_wallet.db
src-tauri/migrations/2024-12-09-094452_create_tapplets/: down.sql
src-tauri/migrations/2025-07-31-100408_create_tapplets/: up.sql
src-tauri/process-wrapper/: Cargo.toml  main.rs
src-tauri/sqlite/: database.db
src-tauri/sqlite/migrations/: 20250829110814_create_tapplets.down.sql  20250829110814_create_tapplets.up.sql
src-tauri/src/: ab_test_selector.rs  airdrop.rs  airdrop_claim.rs  analytics.rs  app_config.rs  app_in_memory_config.rs  auto_launcher.rs  auto_launcher_test.rs  auto_miner.rs  binary_cleanup.rs  binary_cleanup_test.rs  binary_integrity.rs  binary_resolver.rs  cleanup.rs  clythor_adapter.rs  commands.rs  commands_internal.rs  consts.rs  cpu_miner.rs  credential_manager.rs  deep_link.rs  download_utils.rs  event_scheduler.rs  event_scheduler_test.rs  events.rs  events_emitter.rs  events_manager.rs  events_service.rs  exchange_miner.rs  external_dependencies.rs  feedback.rs  file_credential_store.rs  format_utils.rs  gpu_devices.rs  gpu_miner.rs  gpu_miner_adapter.rs  gpu_miner_sha.rs  gpu_miner_sha_adapter.rs  gpu_miner_sha_websocket.rs  gpu_status_file.rs  (+74 more)
src-tauri/src/binaries/: adapter_bridge.rs  adapter_cdn.rs  adapter_github.rs  adapter_tor.rs  adapter_xmrig.rs  binaries_grpcwebproxy.rs  binaries_list.rs  binaries_manager.rs  binaries_resolver.rs  mod.rs  windows_defender.rs
src-tauri/src/binary_resolver/: adapter_github.rs  adapter_xmrig.rs  binaries.rs  binaries_versions.json  mod.rs  resolver.rs
src-tauri/src/clythor/: mod.rs
src-tauri/src/configs/: config_core.rs  config_database_listener.rs  config_mcp.rs  config_mcp_test.rs  config_mining.rs  config_pools.rs  config_portal.rs  config_process_retry.rs  config_ui.rs  config_ui_test.rs  config_wallet.rs  mod.rs  trait_config.rs  trait_config_test.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs  store.rs
src-tauri/src/github/: cache.rs  mod.rs  request_client.rs
src-tauri/src/hardware/: cpu_parameters_reader_impl.rs  cpu_reader.rs  gpu_parameters_reader_impl.rs  gpu_reader.rs  hardware_status_monitor.rs  mod.rs  monitor.rs  opencl_engine.rs  parameters_reader_impl.rs
src-tauri/src/interface/: dev_tapplet.rs  mod.rs  registry.rs  tapplet.rs
src-tauri/src/managers/: telemetry_manager.rs
src-tauri/src/mcp/: audit.rs  commands.rs  mod.rs  rate_limiter.rs  server.rs
src-tauri/src/mining/: mod.rs
src-tauri/src/node/: chain_data_path.rs  data_location.rs  local_node_adapter.rs  mod.rs  node_adapter.rs  node_manager.rs  node_manager_test.rs  remote_node_adapter.rs  utils.rs
src-tauri/src/ootle/: commands.rs  db_connection.rs  hash_calculator.rs  mod.rs  ootle_wallet_adapter.rs  ootle_wallet_json_rpc_client.rs  ootle_wallet_manager.rs  rpc.rs  tapplet_installer.rs  tapplet_server.rs  temp_types.rs  wallet_daemon.rs
src-tauri/src/p2pool/: mod.rs  models.rs  stats_client.rs
src-tauri/src/pin/: mod.rs  pin_locker.rs  pin_manager.rs
src-tauri/src/progress_tracker/: mod.rs  progress_plans.rs  progress_tracker.rs  progress_tracker_impl.rs
src-tauri/src/progress_trackers/: mod.rs  progress_plans.rs  progress_stepper.rs  progress_tracker.rs  trait_progress_tracker.rs
src-tauri/src/request_manager/: manager.rs  mod.rs  request_client.rs
src-tauri/src/requests/: mod.rs  request_client.rs  utils.rs
src-tauri/src/setup/: mod.rs  phase_core.rs  phase_cpu_mining.rs  phase_gpu_mining.rs  phase_hardware.rs  phase_local_node.rs  phase_mining.rs  phase_node.rs  phase_ootle_wallet.rs  phase_remote_node.rs  phase_unknown.rs  phase_wallet.rs  setup_manager.rs  setup_manager_test.rs  trait_setup_phase.rs
src-tauri/src/system_dependencies/: mod.rs  system_dependencies_manager.rs
src-tauri/src/tapplets/: bridge_adapter.rs  commands.rs  error.rs  hash_calculator.rs  mod.rs  server_manager.rs  tapp_consts.rs  tapplet_installer.rs  tapplet_manager.rs  tapplet_server.rs  tapplets_list.rs  tapplets_manager.rs  tapplets_resolver.rs
src-tauri/src/testing/: mod.rs  test_utils.rs
src-tauri/src/tests/: app_config_tests.rs  mod.rs
src-tauri/tapplets-versions/: tapplets_versions_mainnet.json  tapplets_versions_nextnet.json  tapplets_versions_testnets.json
src-tauri/tauri-remote-ui-patched/: .gitignore  Cargo.toml  LICENSE  build.rs
src-tauri/wix/: custom.wxs
(+2448 files in other folders)
