[package]
name = "process-wrapper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Console",
] }
