[package]
authors = ["The Tari Development Community"]
description = "Tari Universe"
edition = "2021"
name = "tari-universe"
repository = "https://github.com/tari-project/universe"
version = "0.8.25"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.5.0"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
async_zip = { version = "0.0.17", features = ["full"] }
auto-launch = "0.5.0"
base64 = "0.22.1"
blake2 = "0.10"
chrono = "0.4.38"
device_query = "2.1.0"
dunce = "1.0.5"
dyn-clone = "1.0.17"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.0.30"
futures-lite = "2.3.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
keyring = { version = "3.0.5", features = [
  "windows-native",
  "apple-native",
  "linux-native",
] }
libsqlite3-sys = { version = "0.25.1", features = [
  "bundled",
] } # Required for tari_wallet
log = "0.4.22"
log4rs = "1.3.0"
minotari_node_grpc_client = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
minotari_wallet_grpc_client = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
monero-address-creator = { git = "https://github.com/tari-project/monero-address-creator.git", rev = "6129ca0" }
nix = { version = "0.29.0", features = ["signal"] }
nvml-wrapper = "0.10.0"
open = "5"
phraze = "0.3.15"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["stream", "json", "multipart"] }
sanitize-filename = "0.5"
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1"
serde_yaml = "0.9.10"
sha2 = "0.10.8"
sys-locale = "0.3.1"
sysinfo = "0.31.2"
tar = "0.4.26"
tari_common = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
tari_core = { git = "https://github.com/tari-project/tari.git", rev = "37c30be", features = [
  "transactions",
] }

tauri-plugin-process = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }

tauri-plugin-single-instance = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }
tari_crypto = "0.21.0"
tari_key_manager = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", rev = "37c30be" }
tari_utilities = "0.8.0"
tauri = { git = "https://github.com/tari-project/tauri.git", rev = "67a06c8a9bae94f412b8059dfa8b4d8dd8ea0a25", features = [
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",

] }
tauri-plugin-os = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }
tauri-plugin-sentry = { git = "https://github.com/tari-project/sentry-tauri", rev = "7554b9a8738d6442d175aa2add55ecc11c52842d" }
tauri-plugin-shell = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }
tauri-plugin-updater = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }
thiserror = "1.0.26"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
xz2 = { version = "0.1.7", features = ["static"] } # static bind lzma
zip = "2.2.0"
dirs = "5.0.1"
tauri-plugin-process = { git = "https://github.com/tari-project/tauri-plugins-workspace", rev = "09f29b0abe2cb1eb81365b65a3aa3f73325e4e17" }

ring = "0.17.8"
hex = "0.4.3"

# temporary fix for openssl
openssl = { version = "0.10", features = ["vendored"] }
ring-compat = "0.8.0"
der = "0.7.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

# needed for keymanager. TODO: Find a way of creating a keymanager without bundling sqlite
chrono = "0.4.38"
device_query = "2.1.0"
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
log = "0.4.22"
nvml-wrapper = "0.10.0"
rand = "0.8.5"
sys-locale = "0.3.1"
# tonic = "0.12.0"

[features]
airdrop-env = []
airdrop-local = []
custom-protocol = [
  "tauri/custom-protocol",
] # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
release-ci = ["tauri/custom-protocol"]
release-ci-beta = ["tauri/custom-protocol"]

[package.metadata.cargo-machete]
ignored = [
  "libsqlite3-sys",
  "log4rs",
  "minotari_wallet_grpc_client",
  "xz2",
  "openssl",
]
