[package]
authors = ["The Tari Development Community"]
description = "Tari Universe"
edition = "2021"
name = "tari-universe"
repository = "https://github.com/tari-project/universe"
version = "1.6.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenvy = "0.15.7"
embed-resource = "2.5.0"
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
async_zip = { version = "0.0.17", features = ["full"] }
auto-launch = "0.5.0"
axum = "0.7.9"
base64 = "0.22.1"
bincode = "1.3"
blake2 = "0.10"
chrono = "0.4.38"
console-subscriber = "0.4.1"
der = "0.7.9"
device_query = "2.1.0"
dirs = "5.0.1"
dunce = "1.0.5"
dyn-clone = "1.0.17"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.0.30"
futures = "0.3.31"
futures-lite = "2.3.0"
futures-util = "0.3.30"
getset = "0.1.5"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
keyring = { version = "3.0.5", features = [
  "apple-native",
  "linux-native-sync-persistent",
  "windows-native",
] }
libsqlite3-sys = { version = "0.35.0", features = [
  "bundled",
] } # Required for tari_wallet
log = "0.4.22"
log4rs = "1.3.0"
minotari_node_grpc_client = { git = "https://github.com/tari-project/tari.git", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
minotari_node_wallet_client = { git = "https://github.com/tari-project/tari.git", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
minotari_wallet_grpc_client = { git = "https://github.com/tari-project/tari.git", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
monero-address-creator = { git = "https://github.com/tari-project/monero-address-creator.git", rev = "6129ca0" }
nix = { version = "0.29.0", features = ["signal"] }
nvml-wrapper = "0.10.0"
open = "5"
openssl = { version = "0.10", features = [
  "vendored",
] } # temporary fix for openssl
phraze = "0.3.15"
psp = { git = "https://github.com/tari-project/psp.git", rev = "ddef0c6" }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["stream", "json", "multipart"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
ring = "0.17.8"
ring-compat = "0.8.0"
sanitize-filename = "0.5"
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1"
serde_yaml = "0.9.10"
sha2 = "0.10.8"
sys-locale = "0.3.1"
sysinfo = "0.31.2"
tar = "0.4.26"
tari_common = { git = "https://github.com/tari-project/tari/", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
tari_common_types = { git = "https://github.com/tari-project/tari/", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
tari_transaction_components = { git = "https://github.com/tari-project/tari/", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
tari_crypto = "0.22.1"
tari_shutdown = { git = "https://github.com/tari-project/tari.git", rev = "766f80ccc20596413ee208311750c11e02a2841d" }
tari_utilities = { version = "0.8", features = ["std"] }
minotari-wallet = { package = "minotari", git = "https://github.com/tari-project/minotari-cli.git", rev = "fefd9853e7c558d73e31047951e029f1775796bd" }
tauri = { version = "2", features = [
  "protocol-asset",
  "isolation",
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
] }
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-sentry = "0.3"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = '2'
tauri-plugin-updater = "2"
thiserror = "2.0.10"
tiny-keccak = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-util = { version = "0.7.14", features = ["compat", "rt"] }
tonic = { version = "0.13.1", features = ["tls-webpki-roots"] }
tower-http = { version = "0.6.2", default-features = false, features = ["fs"] }
tungstenite = "0.26.2"
urlencoding = "2.1.3"
xz2 = { version = "0.1.7", features = ["static"] } # static bind lzma
zip = "2.2.0"
uuid = "1.18.1"
croner = "3.0.0"
starship-battery = "0.10.3"
url = { version = "2.5.4", features = ["default", "serde"] }

[target.'cfg(windows)'.dependencies]
planif = "1.0.0"
whoami = "1.5.2"
winreg = "0.52.0"


chrono = "0.4.38"
device_query = "2.1.0"
log = { version = "0.4.29", features = ["kv"] }
nvml-wrapper = "0.10.0"
rand = "0.8.5"
sys-locale = "0.3.1"

[features]
custom-protocol = [
  "tauri/custom-protocol",
] # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
release-ci = ["tauri/custom-protocol"]
release-ci-beta = ["tauri/custom-protocol"]
exchange-ci = ["tauri/custom-protocol"]

[package.metadata.cargo-machete]
ignored = [
  "device_query",
  "libsqlite3-sys",
  "minotari_wallet_grpc_client",
  "xz2",
  "openssl",
]

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
serial_test = "3.0"
test-case = "3.3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
debug = true
